add_executable(test_mono_init test_mono_init.cpp)
add_executable(test_vio test_vio.cpp)
# add_executable(test_NCC test_NCC.cpp)
# add_executable(test_orb test_orb.cpp)
# add_executable(learn_detector learn_fast.cpp)
# add_executable(learn_detector_self learn_fast_self.cpp generate_cpp_self.cpp)
add_executable(test_normal test.cpp)
add_executable(test_pangolin test_pangolin.cpp)
# add_test( test_orb test_orb )

target_link_libraries(test_mono_init srecon Ceres::ceres fmt::fmt  )
target_link_libraries(test_vio srecon Ceres::ceres fmt::fmt  )
# target_link_libraries(test_decompose_E  srecon fmt::fmt)
# target_link_libraries(test_NCC  srecon fmt::fmt)
# target_link_libraries(test_orb  srecon fmt::fmt gtest  Threads::Threads)
# target_link_libraries(learn_detector  ${THIRD_PARTY_LIBS})
# target_link_libraries(learn_detector_self  ${THIRD_PARTY_LIBS})
target_link_libraries(test_normal  ${THIRD_PARTY_LIBS})
target_link_libraries(test_pangolin  srecon ${THIRD_PARTY_LIBS} pango_display pango_python)

